clusters/staging/apps/envoy-gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: staging-nodeport
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${cluster_subdomain}"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${cluster_subdomain}"
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: wildcard-ingress-tls-secret
            namespace: cert-manager
      allowedRoutes:
        namespaces:
          from: All
